// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupCard snapshot actif et déconnecté 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#0b0b0b",
        "borderColor": "#3A3A3A",
        "borderWidth": 1,
        "margin": 1,
        "padding": 10,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "marginRight": 10,
          "width": 60,
        }
      }
    >
      <View
        testID="primary-action"
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#ECEDEE",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "flex": 1,
                  "fontSize": 16,
                },
                {
                  "color": "#f5c727",
                },
              ],
            ]
          }
        >
          Salon
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#ECEDEE",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "color": "#f5c727",
                  "fontSize": 16,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            Allumées
          </Text>
          <Text
            style={
              [
                {
                  "color": "#ECEDEE",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "color": "#f5c727",
                  "fontSize": 14,
                },
              ]
            }
          >
            %
          </Text>
        </View>
      </View>
      <Text
        style={
          [
            {
              "color": "#ECEDEE",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "color": "#c8c8c8",
              "fontSize": 12,
              "marginTop": 2,
            },
          ]
        }
      >
        3 lumières allumées
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 8,
      }
    }
  >
    <View
      testID="commands-row"
    />
  </View>
</View>
`;

exports[`GroupCard snapshot actif et déconnecté 2`] = `
<View
  style={
    [
      {
        "backgroundColor": "#0b0b0b",
        "borderColor": "#3A3A3A",
        "borderWidth": 1,
        "margin": 1,
        "padding": 10,
        "width": "100%",
      },
      {
        "backgroundColor": "#1a1212",
        "borderColor": "#7f2b2b",
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "marginRight": 10,
          "width": 60,
        }
      }
    >
      <View
        testID="primary-action"
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#ECEDEE",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "flex": 1,
                  "fontSize": 16,
                },
                {
                  "color": "#f5c727",
                },
              ],
            ]
          }
        >
          Salon
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "alignSelf": "flex-end",
                "backgroundColor": "#2a1414",
                "borderColor": "#7f2b2b",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "paddingHorizontal": 6,
                "paddingVertical": 3,
              },
            ]
          }
        >
          <MaterialCommunityIcons
            color="#ff8a80"
            name="wifi-off"
            size={13}
          />
          <Text
            style={
              [
                {
                  "color": "#ECEDEE",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "color": "#ffd7d7",
                    "fontSize": 12,
                    "fontWeight": "700",
                    "lineHeight": 14,
                  },
                  {
                    "fontSize": 11,
                    "lineHeight": 13,
                  },
                ],
              ]
            }
          >
            Déconnecté
          </Text>
        </View>
      </View>
      <Text
        style={
          [
            {
              "color": "#ECEDEE",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "color": "#c8c8c8",
              "fontSize": 12,
              "marginTop": 2,
            },
          ]
        }
      >
        3 lumières allumées
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 8,
      }
    }
  >
    <View
      testID="commands-row"
    />
  </View>
</View>
`;
